test/files/neg/t6359.check
t6359.scala:3: error: implementation restriction: nested object is not allowed in value class
This restriction is planned to be removed in subsequent releases.
      object X
             ^
t6359.scala:4: error: implementation restriction: nested class is not allowed in value class
This restriction is planned to be removed in subsequent releases.
      class Y
            ^
two errors found
